# shared_ros_pkgs

./: README.md
assets/: README.md
camera_cap/: CMakeLists.txt  package.xml
camera_image_publisher/: package.xml  setup.cfg  setup.py
camera_image_publisher/camera_image_publisher/: GstOpenCVConverter.py  cam_jetson_publisher.py  cam_publisher.py
camera_image_publisher/test_jetson_camera/: gst_other_options.txt  requirements.txt  test_cam.py  test_gi_cam.py  test_gi_no_ros.py  test_gi_ros_ver1.py  test_gi_ros_ver2.py  test_gi_stream.py  test_gst_no_opencv.py  test_record.py
midas_node/: package.xml  setup.cfg  setup.py
midas_node/midas_node/: MidasDetector.py  detectionV2.py
recorder/: package.xml  setup.py
recorder/recorder/: recorder_jetson_node.py  recorder_node.py
yolo_ros/yolo_node/: package.xml  setup.py
yolo_ros/yolo_node/yolo_node/: yolo_desktop_ver.py  yolov8_ros2_pt.py
yolo_ros/yolo_node/yolo_node/classes/: classes.txt
